--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Character LCD Designer</title>
   </head>
   <body>
+    <p>Character LCD Designer</p>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
