--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Character LCD Designer</title>
   </head>
   <body>
-    <p>Character LCD Designer</p>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="container-fluid my-4">
+      <div id="root"></div>
+      <script type="module" src="/src/main.jsx"></script>
+    </div>
   </body>
 </html>
