--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="container-fluid my-4">
+      <p><strong>Character LCD Designer (experimental)</strong></p>
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
     </div>
