--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Character LCD Designer</title>
   </head>
   <body>
-    <div class="container-fluid my-4">
-      <p><strong>Character LCD Designer (experimental)</strong></p>
+    <header class="container-fluid my-4">
+      <h1>Character LCD Designer</h1>
+    </header>
+    <main class="container-fluid my-4">
       <div id="root"></div>
-      <script type="module" src="/src/main.jsx"></script>
-    </div>
+    </main>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
