Add meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Create custom characters for HD44780 and test live in a sequence on a freely resizable canvas"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Character LCD Designer</title>
   </head>
