Add home page link in the header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <header class="container-fluid my-4">
+      <a class="home" href="https://mateusznowak.dev" target="_blank"
+        >Back to Home Page</a
+      >
       <h1>Character LCD Designer</h1>
     </header>
     <main class="container-fluid my-4">
