Add extra description for UI elements

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         language you use. It is also possible to change the display size and
         move the cursor around.
       </p>
+      <p>
+        This utility is designed for developers who already know how to use the
+        HD44780 display with their programming language of choice.
+        Unfortunately, it is not possible for me to provide examples for every
+        language, microcontroller or library. Check out the Arduino, MicroPython
+        or CircuitPython docs instead.
+      </p>
       <h2>Source Code</h2>
       <p>
         The source code is available on
