--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <hr />
     </main>
     <footer class="container-fluid my-4">
-      &copy; 2023 Mateusz Nowak <a class="top" href="#">To the top</a>
+      &copy; 2023-2024 Mateusz Nowak <a class="top" href="#">To the top</a>
     </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
